# cascade_generator

./: CMakeLists.txt  main.cpp
trans_results/: circle.txt  cross.txt  rectangle.txt
